--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
     "express": "^4.18.2",
+    "mongodb": "^5.4.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
