--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.4.0",
+    "path": "^0.12.7",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
